# muse-platform

./: CRAFTSMANSHIP.md  Dockerfile  EVALUATION.md  IMPLEMENTATION_COMPLETE.md  MASTER_ORCHESTRATOR_IMPLEMENTATION.md  MUSE_SHOWCASE_FOR_SEIYA.md  Makefile  README.md  REAL_SECURITY_ASSESSMENT.md  SECURITY_ASSESSMENT_REPORT.md  SEIYA_PACKAGE_READY.md  create-eval-pack.sh  deploy.sh  docker-compose.yml  ecosystem-compose.yml  ecosystem-deploy.sh  fix-security-issues.sh  generate_demo.py  k8s-deployment.yaml  kimi_heavy_oversight.py  kimi_oversight_report_20250904_213456.md  kimi_oversight_report_20250904_213625.md  launch-muse.sh  launch-orchestrator.sh  launch.sh  muse_fibonacci_rhythm_demo.mid  orchestrator_api.py  red_zen_analysis_filtered.py  red_zen_gauntlet_report.json  red_zen_muse_gauntlet.py  requirements.txt  start-muse-platform.sh  start_agent.sh  stop-muse.sh
.dist/: EXTRACT_AND_RUN.txt  email_template.txt  muse_eval_pack_20250902.tgz
agent/: main.py
backend/: Dockerfile  README.md  database.py  debug_regex.py  main.py  pyproject.toml  pytest.ini  requirements.txt  startup.py  test_security_minimal.py  test_security_simple.py
backend/muse/: __init__.py  dependencies.py
backend/muse/api/: __init__.py  community.py  integration.py  main.py  music.py
backend/muse/core/: __init__.py  authentication.py  empire_resonance_sync.py  error_handling.py  frequency_engine.py  input_validation.py  predictive_music_engine.py  sacred_geometry_calculator.py  semantic_projection_engine.py
backend/muse/models/: __init__.py  community.py
backend/muse/services/: __init__.py  community_curator.py  discovery_orchestrator.py  resonance_matcher.py
backend/muse/tests/: __init__.py
backend/muse/validation/: __init__.py  automated_data_collection_pipeline.py  mathematical_validation_framework.py  metrics_calculator.py  participant_recruitment_system.py  real_time_statistical_analysis.py  validation_dashboard.py
backend/tests/: conftest.py  test_api_endpoints.py  test_community_features.py  test_core_engines.py  test_database_models.py  test_security.py  test_validation_framework.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: MissionControlDashboard.tsx  MuseApp.tsx  MuseAssessment.tsx  MuseCreativeSession.tsx  MuseDiscoveryInterface.tsx  MuseFrequencyDisplay.tsx  MuseMagicButton.tsx  MusePersonalityQuiz.tsx  MuseSoundEngine.tsx  Navigation.tsx
frontend/src/components/community/: CreationCard.tsx  ResonantFeed.tsx
frontend/src/components/ui/: ArchetypalThemeProvider.tsx  ErrorBoundary.tsx  LoadingStates.tsx
frontend/src/hooks/: useMuseAPI.ts
frontend/src/pages/: MagicLandingPage.tsx  MuseCommunityPage.tsx  MuseDashboardPage.tsx  MuseProfilePage.tsx  MuseSimpleDashboard.tsx  NotFoundPage.tsx  WelcomePage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useMuseStore.ts
frontend/src/tests/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  museMath.ts
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: smoke.sh
